llm_activations and last_token_idx

--- a/examples/inference.ipynb
+++ b/examples/inference.ipynb
@@ -2,9 +2,24 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": 2,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "2025-07-01 05:24:01.253557: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+                        "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+                        "E0000 00:00:1751347441.263990  151251 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+                        "E0000 00:00:1751347441.267370  151251 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+                        "W0000 00:00:1751347441.275626  151251 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+                        "W0000 00:00:1751347441.275635  151251 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+                        "W0000 00:00:1751347441.275636  151251 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+                        "W0000 00:00:1751347441.275637  151251 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n"
+                    ]
+                }
+            ],
             "source": [
                 "import dataclasses\n",
                 "\n",
@@ -29,9 +44,37 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "deterministic True\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "Some kwargs in processor config are unused and will not have any effect: action_dim, vocab_size, scale, min_token, time_horizon. \n",
+                        "Some kwargs in processor config are unused and will not have any effect: action_dim, vocab_size, scale, min_token, time_horizon. \n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "infer return_attention_heads True\n",
+                        "sample_actions return_attention_heads True\n",
+                        "deterministic True\n",
+                        "deterministic True\n",
+                        "Actions shape: (10, 8)\n",
+                        "Att Head Outs (1, 18, 1, 1018, 8, 256)\n"
+                    ]
+                }
+            ],
             "source": [
                 "config = _config.get_config(\"pi0_fast_droid\")\n",
                 "checkpoint_dir = download.maybe_download(\"gs://openpi-assets/checkpoints/pi0_fast_droid\")\n",
@@ -41,12 +84,30 @@
                 "\n",
                 "# Run inference on a dummy example. This example corresponds to observations produced by the DROID runtime.\n",
                 "example = droid_policy.make_droid_example()\n",
-                "result = policy.infer(example)\n",
+                "result = policy.infer(example, return_attention_heads=True)\n",
                 "\n",
                 "# Delete the policy to free up memory.\n",
                 "del policy\n",
                 "\n",
-                "print(\"Actions shape:\", result[\"actions\"].shape)"
+                "print(\"Actions shape:\", result[0][\"actions\"].shape)\n",
+                "print(f\"Att Head Outs {result[1]['llm_activations'].shape}\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 4,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Att Head Outs 13\n"
+                    ]
+                }
+            ],
+            "source": [
+                "print(f\"Last Token Idx {result[1]['last_token_idx']}\")"
             ]
         },
         {
@@ -115,9 +176,9 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "openpi",
             "language": "python",
-            "name": "python3"
+            "name": "openpi"
         },
         "language_info": {
             "codemirror_mode": {
@@ -129,7 +190,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.11.9"
+            "version": "3.11.13"
         }
     },
     "nbformat": 4,
